--- a/student/12/numbers_gui/mainwindow.ui
+++ b/student/12/numbers_gui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>594</width>
-    <height>573</height>
+    <width>596</width>
+    <height>592</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@
     <property name="geometry">
      <rect>
       <x>90</x>
-      <y>90</y>
+      <y>120</y>
       <width>400</width>
       <height>400</height>
      </rect>
@@ -34,13 +34,13 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>0</y>
+      <y>10</y>
       <width>91</width>
       <height>20</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color:white;font:bold 16px</string>
+     <string notr="true">color:rgb(0, 0, 0);font:bold 16px</string>
     </property>
     <property name="text">
      <string>Enter a seed</string>
@@ -49,24 +49,24 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>0</y>
+      <x>150</x>
+      <y>10</y>
       <width>91</width>
       <height>20</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color:white;font:bold 16px</string>
+     <string notr="true">color:rgb(0, 0, 0);font:bold 16px</string>
     </property>
     <property name="text">
      <string>Enter a goal</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="startPushButton">
+   <widget class="QPushButton" name="StartpushButton">
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>60</y>
+      <y>80</y>
       <width>121</width>
       <height>28</height>
      </rect>
@@ -81,11 +81,101 @@
    <widget class="QSpinBox" name="SeedspinBox">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>60</y>
+      <x>30</x>
+      <y>30</y>
       <width>45</width>
       <height>29</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="RestartpushButton">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>50</y>
+      <width>84</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Restart</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="ExitpushButton">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>0</y>
+      <width>84</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Exit</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="WinnerLabel">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>130</y>
+      <width>381</width>
+      <height>381</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="LoserLabel">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>130</y>
+      <width>381</width>
+      <height>381</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="scaledContents">
+     <bool>false</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="TargetspinBox">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>30</y>
+      <width>45</width>
+      <height>29</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>0</number>
+    </property>
+    <property name="maximum">
+     <number>65536</number>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Targetlabel">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>60</y>
+      <width>63</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
@@ -94,7 +184,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>594</width>
+     <width>596</width>
      <height>25</height>
     </rect>
    </property>
