--- a/student/12/numbers_gui/mainwindow.ui
+++ b/student/12/numbers_gui/mainwindow.ui
@@ -14,16 +14,16 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background:rgb(255, 255, 255);</string>
+   <string notr="true">background:rgb(114, 159, 207);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>120</y>
-      <width>400</width>
-      <height>400</height>
+      <x>80</x>
+      <y>130</y>
+      <width>421</width>
+      <height>421</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -33,14 +33,14 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>80</x>
       <y>10</y>
       <width>91</width>
       <height>20</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color:rgb(0, 0, 0);font:bold 16px</string>
+     <string notr="true">color:rgb(0, 0, 0);</string>
     </property>
     <property name="text">
      <string>Enter a seed</string>
@@ -49,30 +49,30 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>200</x>
       <y>10</y>
-      <width>91</width>
+      <width>131</width>
       <height>20</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color:rgb(0, 0, 0);font:bold 16px</string>
+     <string notr="true">color:rgb(0, 0, 0);</string>
     </property>
     <property name="text">
-     <string>Enter a goal</string>
+     <string>Enter a target goal</string>
     </property>
    </widget>
    <widget class="QPushButton" name="StartpushButton">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>80</y>
+      <x>250</x>
+      <y>90</y>
       <width>121</width>
       <height>28</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background:white;color:black;font: bold 16px</string>
+     <string notr="true">color:black;font: bold 20px</string>
     </property>
     <property name="text">
      <string>Start Game</string>
@@ -81,8 +81,8 @@
    <widget class="QSpinBox" name="SeedspinBox">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>30</y>
+      <x>100</x>
+      <y>40</y>
       <width>45</width>
       <height>29</height>
      </rect>
@@ -91,11 +91,14 @@
    <widget class="QPushButton" name="RestartpushButton">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>50</y>
+      <x>490</x>
+      <y>70</y>
       <width>84</width>
       <height>28</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:rgb(233, 185, 110)</string>
     </property>
     <property name="text">
      <string>Restart</string>
@@ -104,11 +107,14 @@
    <widget class="QPushButton" name="ExitpushButton">
     <property name="geometry">
      <rect>
-      <x>500</x>
+      <x>490</x>
       <y>0</y>
       <width>84</width>
       <height>28</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:rgb(239, 41, 41)</string>
     </property>
     <property name="text">
      <string>Exit</string>
@@ -117,10 +123,10 @@
    <widget class="QLabel" name="WinnerLabel">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>130</y>
-      <width>381</width>
-      <height>381</height>
+      <x>90</x>
+      <y>140</y>
+      <width>401</width>
+      <height>401</height>
      </rect>
     </property>
     <property name="text">
@@ -133,10 +139,10 @@
    <widget class="QLabel" name="LoserLabel">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>80</x>
       <y>130</y>
-      <width>381</width>
-      <height>381</height>
+      <width>421</width>
+      <height>421</height>
      </rect>
     </property>
     <property name="text">
@@ -152,8 +158,8 @@
    <widget class="QSpinBox" name="TargetspinBox">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>30</y>
+      <x>240</x>
+      <y>40</y>
       <width>45</width>
       <height>29</height>
      </rect>
@@ -168,14 +174,82 @@
    <widget class="QLabel" name="Targetlabel">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>60</y>
+      <x>180</x>
+      <y>90</y>
       <width>63</width>
       <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string/>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="GamepausepushButton">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>70</y>
+      <width>84</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background:rgb(233, 185, 110); color:rgb(0, 0, 0)</string>
+    </property>
+    <property name="text">
+     <string>Pause Game</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>90</y>
+      <width>181</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Goal for winning the game:</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="PauseLabel">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>290</y>
+      <width>401</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLCDNumber" name="lcdNumber">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>40</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>40</y>
+      <width>141</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Time taken (seconds)</string>
     </property>
    </widget>
   </widget>
